--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.149",
+    "@types/aws-sdk": "^0.0.42",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "aws-cdk": "2.1016.0",
@@ -24,7 +26,10 @@
     "@aws-cdk/aws-lambda": "^1.203.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
     "aws-cdk-lib": "2.195.0",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1692.0",
     "constructs": "^10.0.0",
-    "esbuild": "^0.25.4"
+    "esbuild": "^0.25.4",
+    "uuid": "^11.1.0"
   }
 }
