--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-cdk/aws-apigateway": "^1.203.0",
     "@aws-cdk/aws-lambda": "^1.203.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
+    "@aws-sdk/client-sqs": "^3.816.0",
     "aws-cdk-lib": "2.195.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1692.0",
